# c-deaf-listener

./: CMakeLists.txt  main.cpp
listener/: main.cpp
listener.xcodeproj/: project.pbxproj
listener.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
listener.xcodeproj/project.xcworkspace/xcuserdata/daniele.murroni.xcuserdatad/: UserInterfaceState.xcuserstate
listener.xcodeproj/xcuserdata/daniele.murroni.xcuserdatad/xcschemes/: listener.xcscheme  xcschememanagement.plist
